fix gap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,9 @@
     gap: 0.5em;
     padding-top: 1rem;
 }
+#main-panel > .card > .card-body{
+    padding: .5rem;
+}
 #secondary-panel{
     min-height: 4rem;
     padding: 2rem 0;
